# ulv

./: .copier-answers.yml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  zensical.toml
.agents/: README.md
.agents/commands/: README.md  build.md  plan.md  spec.md  verify.md
.agents/hooks/: block-destructive.sh  ensure-toolchain.sh
.agents/skills/: README.md
.agents/subagents/: README.md  architect.md  developer.md  explorer.md  product-owner.md  reviewer.md
.claude/: settings.json
.claude/rules/: README.md  comments.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
.opencode/: opencode.jsonc
docs/: architecture.md  harness-usage.md  style.md  testing.md  tool-bootstrap.md
docs/adr/: 0001-record-architecture-decisions.md  0002-plugin-discovery-via-entry-points.md  0003-vendor-asv-frontend-and-third-party-js.md  0004-argparse-cli-with-config-file-precedence.md  0005-stdlib-http-client-with-transport-seam.md  0006-zensical-documentation-generator.md  0007-github-actions-ci.md  0008-vendor-uplot-for-self-authored-frontend.md  0009-playwright-mcp-browser-automation.md  (+1 more)
scripts/: check_docs_staleness.py  fmt-file.sh  gen_cli_reference.py  release_notes.py  verify.sh
specs/: initial-project-description.md
tests/: conftest.py  test_cli.py  test_cli_build.py  test_cli_serve.py  test_config.py  test_docs.py  test_e2e_site.py  test_error_paths.py  test_git_enrichment.py  test_harness_config.py  test_help.py  test_input_asv.py  test_input_bencher_api.py  test_input_bmf.py  test_model.py  test_output_html.py  test_output_html_uplot.py  test_paths.py  test_plugins.py  test_release_notes.py  test_testbeds.py
(+90 files in other folders)
