[project]
name = "unladen-velocity"
version = "0.1.0"
description = "Static site generator for visualizing performance benchmark results"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ulv = "ulv.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ulv"

[tool.ruff]
target-version = "py311"
line-length = 88
# Vendored upstream checkout and local data are not ours to lint.
extend-exclude = ["external", "data"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
