[project]
name = "unladen-velocity"
version = "0.1.0"
description = "Static site generator for visualizing performance benchmark results"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ulv = "ulv.cli:main"

[dependency-groups]
dev = [
    "mkdocstrings[python]>=0.29",
    "pytest>=8.0",
    "ruff>=0.8",
    "zensical>=0.0.47",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ulv"

[tool.ruff]
target-version = "py311"
line-length = 88
# Vendored upstream checkout, local data, and the vendored ASV frontend
# (incl. minified third-party JS) are not ours to lint or format.
extend-exclude = ["external", "data", "src/ulv/outputs/html/static"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
